<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.title.TitleFragment"
    android:padding="10dp">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contractorsButton"
        android:text="@string/contractors"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departmentsButton"
        android:text="@string/departments"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employeesButton"
        android:text="@string/employees"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/projectsButton"
        android:text="@string/projects"
        android:textSize="35sp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>